# EnvironmentMonitor

./: CMakeLists.txt  Makefile  app.json  babel.config.js  package-lock.json  package.json
android/: link-assets-manifest.json  settings.gradle
android/app/: build.gradle
android/app/src/main/res/values/: strings.xml
ios/: Podfile  link-assets-manifest.json
ios/inked_shopping/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/inked_shopping.xcodeproj/: project.pbxproj
ios/inked_shopping.xcodeproj/xcshareddata/xcschemes/: inked_shopping.xcscheme
ios/inked_shopping.xcworkspace/: contents.xcworkspacedata
ios/inked_shopping/Images.xcassets/X.imageset/: Contents.json
ios/inked_shopping/Images.xcassets/calendar.imageset/: Contents.json
ios/inked_shopping/Images.xcassets/default_group_pic.imageset/: Contents.json
ios/inked_shopping/Images.xcassets/default_trip_icon.imageset/: Contents.json
ios/inked_shopping/Images.xcassets/dollar_sign.imageset/: Contents.json
ios/inked_shopping/Images.xcassets/existing_bullet.imageset/: Contents.json
ios/inked_shoppingTests/: inked_shoppingTests.m
model/: Grocery.js  Store.js  Trip.js  migrations.js  schema.js
src/: App.tsx  Fridge.tsx  NavigationButton.tsx  Trip.tsx  errors.hpp  main.cpp  models.hpp
src/components/: Database.tsx  DatabaseContext.tsx  NavigationButton.tsx  OverlayManager.tsx  TripIcon.tsx
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/network/: CMakeLists.txt  network.cpp  network.hpp
src/screens/: Fridge.tsx  GroupView.tsx  Groups.tsx  NewTrip.tsx  Receipt.tsx  Trip.tsx
(+9 files in other folders)
